--- a/themes/default/theme/src/scss/docs/_registry.scss
+++ b/themes/default/theme/src/scss/docs/_registry.scss
@@ -17,7 +17,6 @@
         cursor: pointer;
         transition: box-shadow 0.2s ease, background 0.2s ease;
         appearance: none;
-        margin: 16px 0;
 
         &:hover {
             background: rgba(#673EAC, 0.06);
